--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -9,6 +9,7 @@
     DisableBackdropClick="true"
     Position="DialogPosition.Center"
 />
+<MudSnackbarProvider />
 
 <PageTitle>SimTECH</PageTitle>
 
