--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -8,13 +8,17 @@
         <MudGrid>
             <MudItem xs="6">
                 <MudTextField @bind-Value="model.Name" Label="Name" />
-                <MudSelect T="Weather" @bind-Value="model.Weather" Label="Should be track">
-                    @foreach (var select in EnumHelper.GetWeatherSelection())
+                <MudSelect T="long" @bind-Value="model.TrackId" Label="Track">
+                    @foreach (var select in Tracks)
                     {
-                        <MudSelectItem Value="select.Key">@select.Value</MudSelectItem>
+                        <MudSelectItem Value="select.Id">
+                            <CountryFlag Code="@select.Country" Size="FlagSize.Small" />
+                            @select.Name
+                        </MudSelectItem>
                     }
                 </MudSelect>
             </MudItem>
+
             <MudItem xs="6">
                 <MudNumericField T="int" @bind-Value="model.Round" Label="Round" />
                 <MudSelect T="Weather" @bind-Value="model.Weather" Label="Weather">
@@ -24,6 +28,7 @@
                     }
                 </MudSelect>
             </MudItem>
+
             <MudItem xs="12">
                 <MudStack Row="true">
                     <MudNumericField T="int" @bind-Value="_amountStints" Label="Amount of stints" ReadOnly="_amountReadonly" />
@@ -32,66 +37,7 @@
                     </MudButton>
                 </MudStack>
             </MudItem>
-@*            <MudItem xs="12">
-                <div>
-                    <MudText>Stint setup for the race</MudText>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Order</th>
-                                <th>UseDriver</th>
-                                <th>UseCar</th>
-                                <th>UseEngine</th>
-                                <th>UseReliability</th>
-                                <th>RngMin</th>
-                                <th>RngMax</th>
-                            </tr>
-                        </thead>
-                        <tbody ondragover="event.preventDefault();" ondragstart="event.dataTransfer.setData('', event.target.id);">
-                            <!-- NOTE: underneath works but it isn't pretty nor easy to use -->
-                            @foreach (var item in model.Stints.OrderBy(x => x.Order))
-                            {
-                                <tr @ondrop="() => HandleDrop(item)" @key="item"
-                                    @ondragleave="@(() => { item.IsDragOver = false; })"
-                                    @ondragenter="@(() => { item.IsDragOver = true; })"
-                                    style="@(item.IsDragOver ? "border: solid 2px red; background-color:red;" : "")"
-                                    @ondragstart="() => draggingItem = item"
-                                    @ondragend="() => draggingItem = null"
-                                    draggable="true">
-                                    <td>
-                                        <MudText>@item.Order</MudText>
-                                    </td>
-                                    <td>
-                                        <MudCheckBox @bind-Checked="item.UseDriver" Color="Color.Tertiary" />
-                                    </td>
-                                    <td>
-                                        <MudCheckBox @bind-Checked="item.UseCar" Color="Color.Tertiary" />
-                                    </td>
-                                    <td>
-                                        <MudCheckBox @bind-Checked="item.UseEngine" Color="Color.Tertiary" />
-                                    </td>
-                                    <td>
-                                        <MudCheckBox @bind-Checked="item.UseReliability" Color="Color.Tertiary" />
-                                    </td>
-                                    <td>
-                                        <MudNumericField T="int" @bind-Value="item.RngMin" />
-                                    </td>
-                                    <td>
-                                        <MudNumericField T="int" @bind-Value="item.RngMax" />
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                        <tfoot>
-                            <tr>
-                                <td class="d-flex justify end">
-                                    <MudButton StartIcon="@Icons.Material.Filled.Add" IconColor="Color.Secondary" OnClick="AddStint">Add stint</MudButton>
-                                </td>
-                            </tr>
-                        </tfoot>
-                    </table>
-                </div>
-            </MudItem>*@
+
             <MudItem xs="12" Class="@(_amountReadonly ? "" : "d-none")">
                 <MudText>Stint setup for the race</MudText>
                 <MudStack Spacing="3" Row="true">
@@ -113,7 +59,7 @@
                     </ChildContent>
                     <ItemRenderer>
                         <MudListItem>
-                            <MudStack Spacing="3" Row="true">
+                            <MudStack Spacing="2" Row="true">
                                 <MudText>@(1 + context.Order)</MudText>
                                 <MudCheckBox @bind-Checked="context.UseDriver" Color="Color.Tertiary" Label="Driver" />
                                 <MudCheckBox @bind-Checked="context.UseCar" Color="Color.Tertiary" Label="Car" />
@@ -138,10 +84,9 @@
     [CascadingParameter] protected MudDialogInstance? RaceDialog { get; set; }
 
     [Parameter] public Race? Race { get; set; }
-    [Parameter] public List<Track>? Tracks { get; set; }
+    [Parameter] public List<Track> Tracks { get; set; } = new();
 
     private EditRaceModel model = new();
-    private EditStintModel? draggingItem; // model object which is being dragged
     private MudDropContainer<EditStintModel> _container;
     private int _amountStints { get; set; }
     private bool _amountReadonly = false;
@@ -158,12 +103,13 @@
 
     private void SetStintAmount()
     {
-        for (int i = 1; i <= _amountStints; i++)
+        for (int i = 0; i < _amountStints; i++)
         {
             AddStint();
         }
 
         RefreshContainer();
+
         _amountReadonly = !_amountReadonly;
     }
 
@@ -185,28 +131,6 @@
         //the container refreshes the internal state
         _container.Refresh();
     }
-
-    //private void HandleDrop(EditStintModel dropItem)
-    //{
-    //    // draggingitem -> where the drop occurred
-    //    if (draggingItem is null)
-    //        return;
-
-    //    // retain the original order for later
-    //    var initialOrder = dropItem.Order;
-
-    //    // increate all the orders beneath model with 1
-    //    model.Stints.Where(e => e.Order >= initialOrder).ToList().ForEach(e => e.Order++);
-
-    //    draggingItem.Order = initialOrder;
-
-    //    int reorder = 0;
-    //    foreach (var model in model.Stints.OrderBy(e => e.Order).ToList())
-    //    {
-    //        model.Order = reorder++; // keeps numbers from 0 to size-1
-    //        model.IsDragOver = false; // removes the drag over
-    //    }
-    //}
 
     private void ItemDropped(MudItemDropInfo<EditStintModel> dropItem)
     {
