--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -8,13 +8,13 @@
 <MudContainer>
     <MudContainer Class="d-flex justify-space-between pa-2 mx-2 my-2">
         <MudText Typo="Typo.h4">Teams</MudText>
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddTeam">New</MudButton>
+        <MudButton Variant="Variant.Outlined" Color="Color.Success" OnClick="AddTeam">New</MudButton>
     </MudContainer>
     <MudDataGrid T="Team" Items="@TeamData">
         <Columns>
             <HierarchyColumn T="Team" />
             <PropertyColumn Property="e => e.Name" />
-            <TemplateColumn>
+            <TemplateColumn Title="Country">
                 <CellTemplate>
                     <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
                 </CellTemplate>
@@ -23,8 +23,8 @@
             <TemplateColumn CellClass="d-flex justify-end">
                 <CellTemplate>
                     <MudButtonGroup>
-@*                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTeam(context.Item))" />
-*@                    </MudButtonGroup>
+                       <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTeam(context.Item))" />
+                    </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
         </Columns>
