--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -1,4 +1,5 @@
 ﻿@page "/overview/{SeasonId:long}"
+
 @inject SeasonService SeasonService
 @inject NavigationManager Nav
 @inject IDialogService DialogService
@@ -16,8 +17,7 @@
                         <MudText>Hello, the season year is @Season.Year</MudText>
                     </MudItem>
                     <MudItem xs="6">
-                        <MudText>This is a good place to share some info about the state of setting this all up</MudText>
-                        <MudButton OnClick="StartSeason">Start season</MudButton>
+                        <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="StartSeason">Start season</MudButton>
                     </MudItem>
                     <MudItem xs="6">
                         <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddAllEntrants">Add all entrants</MudButton>
@@ -72,7 +72,7 @@
                             }
                             else
                             {
-                                <MudText>Where is the friggin point allotments</MudText>
+                                <MudText>Where are the friggin point allotments</MudText>
                             }
                         </MudPaper>
                     </MudItem>
@@ -80,7 +80,7 @@
                         <MudStack Row="true">
                             <MudText>H</MudText>
                             <MudSpacer />
-                            <MudButton StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason">Edit settings</MudButton>
+                            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason">Edit settings</MudButton>
                         </MudStack>
                     </MudItem>
                 </MudGrid>
