--- a/SimTECH/SimTECH/Pages/Season/SeasonTeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeamEditor.razor
@@ -1,5 +1,87 @@
-﻿<h3>SeasonTeamEditor</h3>
+﻿<MudDialog>
+    <TitleContent>
+        <MudText>Modify season team</MudText>
+    </TitleContent>
+    <DialogContent>
+        <MudForm Model="@Model">
+            @if (Model.Id == 0)
+            {
+                <MudSelect T="long" @bind-Value="@Model.TeamId">
+                    @foreach (var team in Teams)
+                    {
+                        <MudSelectItem Value="team.Id">
+                            <CountryFlag Code="team.Country" Size="FlagSize.Tiny" />
+                            @team.Name
+                        </MudSelectItem>
+                    }
+                </MudSelect>
+            }
+
+            <MudTextField @bind-Value="@Model.Name" Required />
+            <MudTextField @bind-Value="@Model.Principal" Required />
+            <MudColorPicker @bind-Text="@Model.Colour" DisableAlpha="true" />
+            <MudColorPicker @bind-Text="@Model.Accent" DisableAlpha="true" />
+            <MudNumericField @bind-Value="@Model.BaseValue" />
+            <MudNumericField @bind-Value="@Model.Aero" />
+            <MudNumericField @bind-Value="@Model.Chassis" />
+            <MudNumericField @bind-Value="@Model.Powertrain" />
+            <MudNumericField @bind-Value="@Model.Reliability" />
+
+            <MudSelect T="long" @bind-Value="@Model.ManufacturerId">
+                @foreach (var manufacturer in Manufacturers)
+                {
+                    <MudSelectItem Value="manufacturer.Id">@manufacturer.Name</MudSelectItem>
+                }
+            </MudSelect>
+
+            <MudSelect T="long" @bind-Value="@Model.SeasonEngineId">
+                @foreach (var engine in SeasonEngines)
+                {
+                    <MudSelectItem Value="engine.Id">@engine.Name</MudSelectItem>
+                }
+            </MudSelect>
+        </MudForm>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Submit">Ok</MudButton>
+    </DialogActions>
+</MudDialog>
 
 @code {
+    [CascadingParameter] protected MudDialogInstance? TeamDialog { get; set; }
 
+    [Parameter] public long SeasonId { get; set; }
+    [Parameter] public List<Team>? Teams { get; set; }
+    [Parameter] public List<Manufacturer>? Manufacturers { get; set; }
+    [Parameter] public List<SeasonEngine>? SeasonEngines { get; set; }
+    [Parameter] public SeasonTeam? SeasonTeam { get; set; }
+
+    private EditSeasonTeamModel Model = new();
+
+    private bool _loading = true;
+
+    protected override void OnInitialized()
+    {
+        if (SeasonTeam != null)
+        {
+            Model = new EditSeasonTeamModel(SeasonTeam);
+            Model.SeasonId = SeasonId;
+
+            _loading = false;
+        }
+
+        // TODO: handle what happens if teams/seasonengines/manufacturers is null
+    }
+
+    private void Submit()
+    {
+        if (Model.IsDirty)
+        {
+            var modTeam = Model.Record;
+            TeamDialog?.Close(DialogResult.Ok(modTeam));
+        }
+    }
+
+    private void Cancel() => TeamDialog?.Cancel();
 }
