--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -12,6 +12,7 @@
 @using SimTECH.Data.Models
 @using SimTECH.Data.Services
 @using SimTECH.Extensions
+@using SimTECH.PageModels
 @using SimTECH.Pages.Factors
 @using SimTECH.Pages.Setup
 @using SimTECH.Providers
