--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -17,7 +17,7 @@
     <MudAppBar Elevation="1" Dense="true">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Primary" Edge="Edge.Start" OnClick="ToggleSidebar" />
         <MudText>> [Current league]</MudText>
-        <Breadcrumbs />
+        <Breadcrumbs /> @* TODO: Use this implemented feature too *@
         <MudSpacer />
         <MudToggleIconButton @bind-Toggled="@_isDarkTheme"
             Icon="@Icons.Material.Filled.LightMode" Color="Color.Warning" Title="Light"
